<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".screens.entrance.LoginActivity">

    <ImageView
        android:id="@+id/im_login"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:srcCompat="@drawable/im_login"
        android:layout_marginTop="45dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:clickable="false"/>

    <TextView
        android:id="@+id/tv_login"
        style="@style/textSeamyBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="25dp"
        android:clickable="false"
        android:text="@string/login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/im_login" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="55dp"
        android:layout_marginTop="25dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="false"
                android:background="@drawable/vc_mail" />
            <EditText
                android:id="@+id/et_login_email"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/readex_pro"
                android:hint="@string/email"
                android:layout_marginStart="7dp"
                android:textColorHint="#757575"
                android:inputType="text"
                android:textColor="@color/black"
                tools:ignore="TextFields" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:autofillHints=""
                android:clickable="false"
                android:background="@drawable/vc_lock" />
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/et_login_password"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:paddingEnd="25dp"
                    android:autofillHints=""
                    android:fontFamily="@font/readex_pro"
                    android:hint="@string/password"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textColorHint="#757575"
                    tools:ignore="TextFields" />
                <ImageButton
                    android:id="@+id/ib_login_eye"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|bottom"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/vc_eye_off"
                    android:contentDescription="@string/app_name"
                    tools:ignore="TouchTargetSizeCheck" />
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/bt_login_login"
        android:layout_width="241dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/readex_pro"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="TextSizeCheck,DuplicateSpeakableTextCheck" />

    <LinearLayout
        android:id="@+id/ln_login_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_login_login">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:fontFamily="@font/readex_pro"
            android:textColor="@color/black"
            android:text="@string/no_account_1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginStart="3dp"
            android:fontFamily="@font/readex_pro"
            android:textColor="@color/violet"
            android:text="@string/no_account_2"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>