<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".screens.entrance.SignUpActivity">

    <ImageButton
        android:id="@+id/bt_signUp_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/vc_back"
        android:clickable="true"
        android:contentDescription="back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/im_sign_up"
        android:layout_width="320dp"
        android:layout_height="320dp"
        android:layout_marginTop="40dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/im_sign_up"
        android:clickable="false"/>

    <TextView
        android:id="@+id/tv_sign_up"
        style="@style/textSeamyBold"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginTop="10dp"
        android:text="@string/sign_up"
        android:clickable="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/im_sign_up" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="52dp"
        android:layout_marginTop="26dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sign_up">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="false"
                android:background="@drawable/vc_mail" />

            <EditText
                android:id="@+id/et_signUp_email"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:fontFamily="@font/readex_pro"
                android:hint="@string/email"
                android:layout_marginStart="7dp"
                android:inputType="text"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="false"
                android:background="@drawable/vc_person" />

            <EditText
                android:id="@+id/et_signUp_username"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:autofillHints=""
                android:fontFamily="@font/readex_pro"
                android:hint="@string/username"
                android:inputType="text"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/vc_lock" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_signUp_password"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:autofillHints=""
                    android:fontFamily="@font/readex_pro"
                    android:hint="@string/password"
                    android:inputType="text"
                    android:clickable="false"
                    android:textColor="@color/black"
                    tools:ignore="TextFields" />
                <ImageButton
                    android:id="@+id/ib_singUp_eye"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|bottom"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/vc_eye_off"
                    android:contentDescription="@string/app_name"
                    tools:ignore="TouchTargetSizeCheck" />
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/bt_signUp_signUp"
        android:layout_width="241dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/readex_pro"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>